[package]
name = "scrub-db"
version = "0.2.0"
edition = "2021"
authors = ["Joyen12 <joyen12@gmail.com>"]
description = "Manual database anonymization tool - Free version"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joyen12/scrub-db"
keywords = ["database", "anonymization", "pii", "gdpr", "privacy"]
categories = ["command-line-utilities", "database"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "NOTICE",
]

# Library: Core anonymization engine (free)
[lib]
name = "scrub_db_core"
path = "src/lib.rs"

# Binary: Free CLI tool
[[bin]]
name = "scrub-db"
path = "src/bin/scrub-db.rs"

[dependencies]
# CLI and core functionality
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Anonymization
fake = { version = "2.9", features = ["derive"] }
regex = "1.10"
sha2 = "0.10"




